Added military service
Added my military service record

--- a/cv1.html
+++ b/cv1.html
@@ -1219,6 +1219,9 @@
                 Science</span
               ><span class="c5"><br /></span><span class="c7">Louisiana</span
               ><span class="c6">&nbsp;State University | 2000</span>
+              <br />United States Air Force - Veteran</span
+              ><span class="c5"><br /></span></span>
+
             </p>
           </td>
           <td class="c32" colspan="1" rowspan="1">
