--- a/cv1.html
+++ b/cv1.html
@@ -1219,8 +1219,8 @@
                 Science</span
               ><span class="c5"><br /></span><span class="c7">Louisiana</span
               ><span class="c6">&nbsp;State University | 2000</span>
-              <br />United States Air Force - Veteran</span
-              ><span class="c5"><br /></span></span>
+              <br /><span clas="c7">United States Air Force - Veteran</span></span
+              ><span class="c5"><br /></span>
 
             </p>
           </td>
