update template and some wording

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html
 <!--
 	Shout Out to HTML5 UP - html5up.net | @ajlkn
 -->
-<html>
+lang="en" xmlns="http://www.w3.org/1999/html"></html>
 
 <head>
 	<title>Scottie Horne</title>
@@ -60,7 +60,7 @@
 					<div class="content">
 						<h2 class="major">My Core Work Values</h2>
 						
-							<p class="align-left">What you can expect we enter into partnership is hard work, integrity, loyalty, and innovation.</p> 
+							<p class="align-left">What you can expect when we enter into partnership is hard work, integrity, loyalty, and innovation.</p> 
 							
 						<a href="workvalue.html" class="special">Learn more</a>
 					</div>
@@ -88,11 +88,7 @@
 					<div class="content">
 						<h2 class="major">Future Focus</h2>
 						<p>
-							Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras
-							turpis ante, nullam sit amet turpis non, sollicitudin posuere
-							urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim
-							dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla
-							cursus.
+							I'm driven by a desire to improve life quality and find the best, safest, most cost effective solutions to suit my client's needs today and tomorrow. The future is coming, and sooner than you think. These innovative technologies will change the way we live, how we function in the physical world, care for our bodies, and may even help us avert a climate disaster.
 						</p>
 						<a href="#" class="special">Learn more</a>
 					</div>
