updated phone number

--- a/cv1.html
+++ b/cv1.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
     <style type="text/css">
@@ -1082,7 +1082,7 @@
                 </tr>
                 <tr class="c31">
                   <td class="c16" colspan="1" rowspan="1">
-                    <p class="c8"><span class="c6">318-402-8464</span></p>
+                    <p class="c8"><span class="c6">318-759-7664</span></p>
                   </td>
                   <td class="c11" colspan="1" rowspan="1">
                     <p class="c12">
