correct the name space meta data

--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html
-<!--
-	Shout Out to HTML5 UP - html5up.net | @ajlkn
--->
-lang="en" xmlns="http://www.w3.org/1999/html"></html>
-
+<!-- 	Shout Out to HTML5 UP - html5up.net | @ajlkn   	-->
+<html lang="en-us" xmlns="http://www.w3.org/1999/html">
 <head>
 	<title>Scottie Horne</title>
 	<meta charset="utf-8" />
