--- a/cv.html
+++ b/cv.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
-<!--
-	Shout Out to HTML5 UP - html5up.net | @ajlkn
--->
-<html>
+<!--	Shout Out to HTML5 UP - html5up.net | @ajlkn	-->
+<html lang="en-us" xmlns="http://www.w3.org/1999/html">
 
 <head>
 	<title>Scottie Horne</title>
