updated role and skill descriptions

--- a/cv1.html
+++ b/cv1.html
@@ -1055,7 +1055,7 @@
           <td class="c13" colspan="1" rowspan="1">
             <p class="c38">
               <span class="c43">Scottie Horne<br /><br /></span
-              ><span class="c15 c39">FULL STACK DEVELOPER</span>
+              ><span class="c15 c39">System Administrator / Project Manager / FULL STACK DEVELOPER</span>
             </p>
           </td>
           <td class="c30" colspan="1" rowspan="1">
@@ -1163,48 +1163,47 @@
           <td class="c3" colspan="1" rowspan="1">
             <p class="c0"><span class="c1">SKILLS</span></p>
             <ul class="c10 lst-kix_xjt592wkfol8-0 start">
-              <li class="c2 li-bullet-0"><span class="c6">HTML5</span></li>
-              <li class="c2 li-bullet-0">
-                <span class="c6"
-                  >CSS Frameworks <br />(Bootstrap &amp; Materialize)</span
-                >
-              </li>
+              <li class="c2 li-bullet-0"><span class="c6">Active Directory</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">Asset Management</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">HTML5  &amp; CSS Frameworks <br /></span></li>
               <li class="c2 li-bullet-0"><span class="c6">JavaScript</span></li>
-              <li class="c2 li-bullet-0"><span class="c6">jQuery</span></li>
-              <li class="c2 li-bullet-0"><span class="c6">JSON</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">Apple, Linux, Windows Server & desktop</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">Cisco MDM, Solarwinds</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">Meraki Systems Manager</span></li>
               <li class="c2 li-bullet-0"><span class="c6">JAVA</span></li>
-              <li class="c2 li-bullet-0"><span class="c6">JIRA</span></li>
-              <li class="c2 li-bullet-0"><span class="c6">TRELLO</span></li>
-              <li class="c2 li-bullet-0"><span class="c6">REST API</span></li>
-              <li class="c2 li-bullet-0"><span class="c6">SQL/MYSQL</span></li>
-              <li class="c2 li-bullet-0">
-                <span class="c6">ORM (Sequelize)</span>
-              </li>
+              <li class="c2 li-bullet-0"><span class="c6">Bugzilla, JIRA, ServiceNow</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">TRELLO, SharePoint</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">ITIL Hygiene Practices</span></li>
+              <li class="c2 li-bullet-0"><span class="c6">Database Management</span></li>
               <li class="c2 li-bullet-0"><span class="c6">Python</span></li>
-              <li class="c2 li-bullet-0">
-                <span class="c6">Git Version Control</span>
-              </li>
+              <li class="c2 li-bullet-0"><span class="c6">Version Control</span></li>
             </ul>
             <p class="c24 c37"><span class="c6"></span></p>
             <p class="c36"><span class="c1 c15">SOFT SKILLS</span></p>
             <ul class="c10 lst-kix_xjt592wkfol8-0">
               <li class="c20 li-bullet-1">
-                <span class="c6">Database Management</span>
-              </li>
-              <li class="c20 li-bullet-1">
-                <span class="c6">Iterative Methodologies</span>
+                <span class="c6">CRM & Stakeholder counsel</span>
               </li>
               <li class="c20 li-bullet-2">
-                <span class="c6">Network Management</span>
+                <span class="c6">Resource Management</span>
+              </li>
+              <li class="c20 li-bullet-2">
+                <span class="c6">Agile Iterative Methodologies</span>
+              </li>
+              <li class="c20 li-bullet-2">
+                <span class="c6">Analysis & Problem Solving</span>
               </li>
               <li class="c20 li-bullet-2">
                 <span class="c6">Project Management</span>
               </li>
-              <li class="c20 li-bullet-1">
-                <span class="c6">Resource Management</span>
+              <li class="c20 li-bullet-2">
+                <span class="c6">Customer Service</span>
               </li>
               <li class="c20 li-bullet-1">
-                <span class="c6">Server Technologies</span>
+                <span class="c6">Conflict Management</span>
+              </li>
+              <li class="c20 li-bullet-1">
+                <span class="c6">Stewardship</span>
               </li>
               <li class="c20 li-bullet-1">
                 <span class="c7">Full Life-cycle management </span>
@@ -1214,25 +1213,23 @@
               <span class="c1"><br />EDUCATION<br /></span
               ><span class="c7">Full Stack Development</span
               ><span class="c5"><br /></span
-              ><span class="c7"
-                >Tech Talent South | March 2021<br /><br />Bachelor in Computer
-                Science</span
-              ><span class="c5"><br /></span><span class="c7">Louisiana</span
-              ><span class="c6">&nbsp;State University | 2000</span>
-              <br /><span clas="c7">United States Air Force - Veteran</span></span
-              ><span class="c5"><br /></span>
+              ><span class="c7">Tech Talent South | March 2021<br /></span
+              ><span class="c7">Bachelor in Computer Science</span><span class="c7"></span
+              ><span class="c6"><br />&nbsp;Louisiana State University | 2000</span>
+              <br /><span clas="c7"></span>
+              <span class="c5">United States Air Force - Veteran<br /></span>
 
             </p>
           </td>
           <td class="c32" colspan="1" rowspan="1">
             <p class="c28"><span class="c1 c15">WORK EXPERIENCE</span></p>
             <p class="c29">
-              <span class="c9">Application Management Services &nbsp; </span
+              <span class="c9">Application Analysts / FST &nbsp; </span
               ><span class="c6"
                 >&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-                <br />Irving, TX, Christus Health, 2017 -2020 &nbsp; &nbsp;
+                <br />Shreveport, LA, Christus Health, 2017 -2023 &nbsp; &nbsp;
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
@@ -1242,32 +1239,28 @@
             </p>
             <ul class="c10 lst-kix_l4e8y99ell5x-0 start">
               <li class="c4 li-bullet-3">
-                <span class="c6"
-                  >Keep current jobs in the present tense and all previous jobs
-                  in the past tense. Stick to a format the entire way through
-                  (i.e. use periods at the end of each bullet or don&rsquo;t
-                  just be consistent).</span
-                >
+                <span class="c6">Excellent organizational skills and able to manage multiple deadlines</span>
               </li>
               <li class="c4 li-bullet-4">
-                <span class="c6"
-                  >Don&rsquo;t list every responsibility you had, focus on the
-                  few key tasks relevant to the job. Be short and direct. Hiring
-                  managers sift through hundreds of resumes. They need you to
-                  highlight what is most important.</span
-                >
+                <span class="c6">Provides on-the-job training for new and current employees</span>
               </li>
               <li class="c4 li-bullet-4">
-                <span class="c6"
-                  >Use metrics to measure your impact if you have them
-                  available.</span
-                >
+                <span class="c6">Performs OS patches and upgrades on regular basis and hardware replacement (Appliances, Desktops, Switches, Servers, Printers, etc)</span>
+              </li>
+              <li class="c4 li-bullet-4">
+                <span class="c6">Answers, evaluates, and prioritizes incoming telephone, voice mail, e-mail, ticket request, and in-person requests for hardware, software, networking, and other technology issues</span>
+              </li>
+              <li class="c4 li-bullet-4">
+                <span class="c6">Create reports for management in an interdisciplinary setting</span>
+              </li>
+              <li class="c4 li-bullet-4">
+                <span class="c6">Proven ability to prioritize and manage, multiple projects, tasks, issues and resolution activities</span>
+              </li>
+              <li class="c4 li-bullet-4">
+                <span class="c6">Delivers excellent verbal and written communication [reports, justifications, charts, graphs, statistical and narrative data] to technical and non-technical audiences</span>
               </li>
               <li class="c4 li-bullet-3">
-                <span class="c6"
-                  >Use your job description as a skeleton and fill in the
-                  relevant details.</span
-                >
+                <span class="c6">Utilizes problem-solving skills to identify and manage issues/risks</span>
               </li>
             </ul>
             <p class="c17 c23"><span class="c6"></span></p>
@@ -1282,23 +1275,27 @@
             </p>
             <ul class="c10 lst-kix_kehe80jcdm96-0 start">
               <li class="c4 li-bullet-4">
-                <span class="c6"
-                  >Worked productively with the Product Team to understand
-                  requirements and business specifications around Portfolio
-                  Management, Analytics, and Risk.</span
-                >
+                <span class="c6">Established infrastructure to support proposed EHR, EMR to align with current regulatory standards</span>
               </li>
               <li class="c4 li-bullet-4">
-                <span class="c6"
-                  >Effectively coded software changes and alterations based on
-                  specific design specifications.</span
-                >
+                <span class="c6">Implemented NextGen EHR, EMR, Dental & Pharmacy Practice Management within 18 months</span>
               </li>
               <li class="c4 li-bullet-5">
-                <span class="c6"
-                  >Worked to solve complex problems using the latest in Cloud,
-                  Mobile, and Web Technologies</span
-                >
+                <span class="c6">Coordinating the creation, evaluation, and submission of the nonclinical and clinical regulatory modules</span>
+              </li>
+              <li class="c4 li-bullet-5">
+                <span class="c6">Coordinated the flow related to patient accounts to ensure that centers revenues are appropriately posted, billed, and collected; improving collections by 20%</span>
+              </li>
+              <li class="c4 li-bullet-4">
+                <span class="c6">Worked productively with the Product Team to understand
+                  requirements and business specifications around Portfolio
+                  Management, Analytics, and Risk.</span>
+              </li>
+              <li class="c4 li-bullet-4">
+                <span class="c6">Leads project planning activities to define SOW, deadlines, owners and key milestones, as specified by the charter</span>
+              </li>
+              <li class="c4 li-bullet-5">
+                <span class="c6">Excellent organizational skills and able to manage multiple deadlines</span>
               </li>
             </ul>
             <p class="c17"><span class="c6"></span></p>
