--- a/index.html
+++ b/index.html
@@ -95,20 +95,16 @@
 			<!-- Four -->
 			<section id="four" class="wrapper alt style1">
 				<div class="inner">
-					<h2 class="major">Vitae phasellus</h2>
+					<h2 class="major">Featured Projects</h2>
 					<p>
-						Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-						Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis
-						egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus
-						in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.
+						These featured projects are not chosen for being advanced projects — rather, what is fun or have been interesting.
 					</p>
 					<section class="features">
 						<article>
-							<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-							<h3 class="major">Sed feugiat lorem</h3>
+							<a href="#" class="image"><img src="images/Tic-tac-toe.png" alt="Tic-tac-toe game"  width="500" height="350" /></a>
+							<h3 class="major">Tic-tac-toe</h3>
 							<p>
-								Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id
-								nulla dignissim dapibus ultrices.
+								Quick little tic-tac-toe game to practice javascript and DOM interaction.
 							</p>
 							<a href="#" class="special">Learn more</a>
 						</article>
@@ -152,10 +148,7 @@
 			<div class="inner">
 				<h2 class="major">Get in touch</h2>
 				<p>
-					Cras mattis ante fermentum, malesuada neque vitae, eleifend erat.
-					Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis
-					egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus
-					in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.
+					Questions? Email Me.
 				</p>
 				<form method="post" action="#">
 					<div class="fields">
@@ -178,15 +171,16 @@
 				</form>
 				<ul class="contact">
 					<li class="icon solid fa-home">
-						Untitled Inc<br />
-						1234 Somewhere Road Suite #2894<br />
-						Nashville, TN 00000-0000
+						Home<br />
+						Anandale drive<br />
+						Bossier City, LA 71112-5034
 					</li>
-					<li class="icon solid fa-phone">(000) 000-0000</li>
+					<li class="icon solid fa-phone">(318) 759-7664</li>
 					<li class="icon solid fa-envelope">
-						<a href="#">information@untitled.tld</a>
+						<a href="#">scottie.horne.01@gmail.com</a>
 					</li>
-					<li class="icon brands fa-twitter">
+					<!-- Social Media Contact 
+						<li class="icon brands fa-twitter">
 						<a href="#">twitter.com/untitled-tld</a>
 					</li>
 					<li class="icon brands fa-facebook-f">
@@ -194,7 +188,8 @@
 					</li>
 					<li class="icon brands fa-instagram">
 						<a href="#">instagram.com/untitled-tld</a>
-					</li>
+					</li> 
+					end Social Medial Contact -->
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Untitled Inc. All rights reserved.</li>
