shorten role names

--- a/cv1.html
+++ b/cv1.html
@@ -1055,7 +1055,7 @@
           <td class="c13" colspan="1" rowspan="1">
             <p class="c38">
               <span class="c43">Scottie Horne<br /><br /></span
-              ><span class="c15 c39">System Administrator / Project Manager / FULL STACK DEVELOPER</span>
+              ><span class="c15 c39">Sys Admin - Project Manager <br/> FULL STACK DEVELOPER</span>
             </p>
           </td>
           <td class="c30" colspan="1" rowspan="1">
