update features and cv link

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					</p>
 					<section class="features">
 						<article>
-							<a href="#" class="image"><img src="images/Tic-tac-toe.png" alt="Tic-tac-toe game"  width="500" height="350" /></a>
+							<a href="./tictactoe/tictactoe.html" class="image"><img src="images/Tic-tac-toe.png" alt="Tic-tac-toe game"  width="500" height="350" /></a>
 							<h3 class="major">Tic-tac-toe</h3>
 							<p>
 								Quick little tic-tac-toe game to practice javascript and DOM interaction.
